# Multimodal_rag

./: .env.example  .gitignore  README.md  backend.py  frontend.py  pyproject.toml
llm/: embedder.py  prompt_template.py  vectorstore.py
utils/: file_ops.py  transcript_ops.py
